# Scheduler_Gui

./: .gitignore  .gitignore.autosave  GanttChart.cpp  GanttChart.h  GanttChartLogic.cpp  GanttChartLogic.h  GanttChartMainWindow.cpp  GanttChartMainWindow.h  GanttChartWidget.cpp  GanttChartWidget.h  GlobalState.cpp  GlobalState.h  InputData.h  JsonReader.cpp  JsonReader.h  MainWindow.cpp  MainWindow.h  Makefile  OutputData.h  README  README.md  Solver.h  barchartview.cpp  barchartview.h  build_errors.txt  data.json  draggablebarchart.cpp  draggablebarchart.h  gch  gch.pro  gch_2  gch_2.pro  gch_3.pro  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  moc_barchartview.cpp  (+12 more)
build-gch-desctop-debug/: Makefile  moc_mainwindow.cpp  moc_qcustomplot.cpp
build-gch_2-Desktop-Debug/: Makefile  gch_2  moc_secondwindow.cpp  ui_mainwindow.h
build_gch_3_Desktop_Debug/: Makefile  gch_3  moc_GanttChart.cpp  moc_GanttChartMainWindow.cpp  moc_GanttChartWidget.cpp  moc_MainWindow.cpp
solver_program/: CMakeLists.txt  inputdata.json  outputdata.json  solver.cpp  solver.h
